old slurm/slurm-5080.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:2:
include/f/pattern/pattern.hpp:296:5: error: use of undeclared identifier 'i'
for(i=0;i<13;i++)
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
, thickness = (0,1), ug_size = 9, tilt_size= 13, column_index = 0,
 ar0 = 
0	2	1	
1	0	4	
2	3	0	
,
 diag0 = 
0	
0.45410156000000001519	
-0.5854492199999999924	
, 
Intensity[0]
 = 0.99999820999999999849	
7.4000000000000000887e-07	
7.2999999999999999873e-07	

Merit: 8.5843910620745079861e-08
ABS: 0.001117095507829739872

ug=
1	0	0.0005930819999999999842	-6.3790100000000002881e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.082869600000000001594	-7.396030000000000153e-09	0.082869600000000001594	7.396030000000000153e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.064142500000000005067	0	0.0005930819999999999842	-6.3790100000000002881e-09	0.064142500000000005067	0	

a is 
0	0	-6.3790100000000002881e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.0005930819999999999842	
6.3790100000000002881e-09	0.0005930819999999999842	0	0.45410156000000001519	-7.396030000000000153e-09	0.082869600000000001594	
-6.3790100000000002881e-09	0.0005930819999999999842	7.396030000000000153e-09	0.082869600000000001594	0	-0.5854492199999999924	

 max dim 3, a.size = 18 ,data.cache =
 0x7f039dc00000, offset =0

real	0m1.039s
user	0m0.180s
sys	0m0.656s
